--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "icons:generate": "npx @svgr/cli src/assets/icons --out-dir src/components/icons/svgs --typescript"
   },
   "dependencies": {
+    "@codaworks/react-glow": "^1.0.6",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.5.1",
@@ -23,6 +24,7 @@
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^3.0.1",
     "lucide-react": "^0.462.0",
+    "motion": "^11.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.1.3",
