--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
-    "paths": {
-      "@/*": ["./src/*"],
+   "paths": {
+      "@/*": ["./src/*"]
     },
     "moduleResolution": "bundler",
     "esModuleInterop": true,
