--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "compilerOptions": {
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "baseUrl": ".",
-   "paths": {
+    "paths": {
       "@/*": ["./src/*"]
     },
     "moduleResolution": "bundler",
