--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@codaworks/react-glow": "^1.0.6",
     "@gsap/react": "^2.1.1",
+    "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.1",
@@ -35,10 +37,12 @@
     "lightgallery": "^2.8.2",
     "lucide-react": "^0.462.0",
     "motion": "^11.15.0",
+    "nouislider-react": "^3.4.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.1.3",
     "react-lazy-load-image-component": "^1.6.3",
+    "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.0.1",
     "recharts": "^2.15.0",
     "tailwind-merge": "^2.5.5",
