--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-lazy-load-image-component": "^1.6.3",
     "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.0.1",
+    "react-star-ratings": "^2.3.0",
     "recharts": "^2.15.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
